large extension for CICD testing